--- a/frontend/tryityourself.html
+++ b/frontend/tryityourself.html
@@ -18,7 +18,7 @@
     <div class="links">
         <nav>
 
-            <a href="homepage.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="tryityourself.html">Try it yourself</a>
         </nav>
     </div>
