--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="links">
         <nav>
 
-            <a href="homepage.html">Home</a>
-            <a href="tryityourself.html">Try it yourself</a>
+            <a href="index.html">Home</a>
+            <a href="frontend/tryityourself.html">Try it yourself</a>
 
         </nav>
     </div>
