--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Connect Four Homepage</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/homepage.js"></script>
+    <link rel="stylesheet" href="frontend/css/style.css">
+    <script src="frontendjs/homepage.js"></script>
 
 </head>
 
@@ -36,7 +36,7 @@
             <div class="image">
                 <img src="connect4.jpg" alt="Connect Four">
             </div>
-            <button class="try_button" onclick="window.location.href='tryityourself.html'">TRY NOW</button>
+            <button class="try_button" onclick="window.location.href='frontend/tryityourself.html'">TRY NOW</button>
         </section>
 
     </div>
