--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h1>A new way of playing classic board games</h1>
             </div>
             <div class="image">
-                <img src="connect4.jpg" alt="Connect Four">
+                <img src="frontend/connect4.jpg" alt="Connect Four">
             </div>
             <button class="try_button" onclick="window.location.href='frontend/tryityourself.html'">TRY NOW</button>
         </section>
